src/test/ui/traits/vtable/vtable-vacant.stderr
error: vtable entries for `<S as B>`: [
           MetadataDropInPlace,
           MetadataSize,
           MetadataAlign,
           Method(<S as A>::foo_a1),
           Vacant,
           Method(<S as B>::foo_b1),
           Vacant,
       ]
  --> $DIR/vtable-vacant.rs:15:1
   |
LL | trait B: A {
   | ^^^^^^^^^^

error: aborting due to previous error

